terraform-iac-basic/v2/network.tf
data "aws_availability_zones" "available" {}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "2.0.0"

  name = "app-test"
  cidr = "10.168.0.0/16"

  # pick the first 3 of the available AZs
  azs = slice(data.aws_availability_zones.available.names, 0, 3)

  # statically defined public subnets
  public_subnets  = ["10.168.1.0/24", "10.168.2.0/24", "10.168.3.0/24"]

  # statically defined private subnets
  private_subnets = ["10.168.101.0/24", "10.168.102.0/24", "10.168.103.0/24"]

  enable_nat_gateway = true
  one_nat_gateway_per_az = true

  tags = {
    Name = "app-test"
    Environment = "test"
  }
}

resource "aws_security_group" "app" {
  name = "app_sg"
  description = "App Server Security Group"
  
  # in the new VPC
  vpc_id = module.vpc.vpc_id

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group_rule" "allow_inbound_ssh" {
  type = "ingress"
  from_port = 22
  to_port = 22
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.app.id
}

resource "aws_security_group_rule" "allow_inbound_http" {
  type = "ingress"
  from_port = 80
  to_port = 80
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.app.id
}

resource "aws_security_group_rule" "allow_inbound_https" {
  type = "ingress"
  from_port = 443
  to_port = 443
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.app.id
}
